--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
         <groupId>org.sonatype.oss</groupId>
         <artifactId>oss-parent</artifactId>
         <version>7</version>
+        <relativePath></relativePath>
     </parent>
     
     <groupId>org.helgoboss</groupId>
@@ -13,14 +14,14 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>My OSS Parent POM</name>
-    <description>Parent POM for my Scala Sonatype OSS projects</description>
+    <description>Common parent POM for all my Scala projects which are supposed to be published on Sonatype OSS</description>
     
     
-    <url>https://github.com/helgoboss/my-oss-parent</url>
+    <url>https://github.com/helgoboss/my-scala-oss-parent</url>
     <scm>
-        <url>https://github.com/helgoboss/my-oss-parent</url>
-        <connection>scm:git:https://github.com/helgoboss/my-oss-parent</connection>
-        <developerConnection>scm:git:https://github.com/helgoboss/my-oss-parent</developerConnection>
+        <url>https://github.com/helgoboss/my-scala-oss-parent</url>
+        <connection>scm:git:https://github.com/helgoboss/my-scala-oss-parent</connection>
+        <developerConnection>scm:git:https://github.com/helgoboss/my-scala-oss-parent</developerConnection>
     </scm>
     <licenses>
         <license>
