--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
         <groupId>org.sonatype.oss</groupId>
         <artifactId>oss-parent</artifactId>
         <version>7</version>
-        <relativePath></relativePath>
+        <relativePath />
     </parent>
     
     <groupId>org.helgoboss</groupId>
     <artifactId>my-scala-oss-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
     <name>My OSS Parent POM</name>
     <description>Common parent POM for all my Scala projects which are supposed to be published on Sonatype OSS</description>
